Beta 1.2 Snapshot ver. 3

--- a/addons/sourcemod/translations/achievements.phrases.txt
+++ b/addons/sourcemod/translations/achievements.phrases.txt
@@ -1,5 +1,12 @@
 "Phrases"
 {
+	// Реклама в чате после выполениня и получения достижения
+	// Не трогать если не знаешь!
+	"message_reward"
+	{
+		"#format"	"{1:s}"
+		"ru"		"Получил: {1}"
+	}
 	// Шаблон заполнения для достижения
 	// "Название достижения из конфига: name"	// отображаемое название в меню (название достижения)
 	// {
